<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/image_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/longclick_chooseaction"
        android:gravity="center"
        android:textSize="30dp"
        android:background="@drawable/bottomborder"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/edit_contact"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@drawable/bottomborder"
                android:text="@string/longclick_edit_button"
                android:textSize="20dp"
                android:onClick="edit_clicked_contact"/>
            <Button
                android:id="@+id/delete_contact"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@drawable/bottomborder"
                android:text="@string/longclick_delete_contact"
                android:textSize="20dp"
                android:onClick="edit_clicked_contact"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>