<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/footer"
        android:fadeScrollbars="false"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:id="@+id/results_photo"
                    android:src="@drawable/nophoto"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center_vertical"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/name_background"
                        android:scrollHorizontally="true"
                        android:ellipsize="end"
                        android:maxLines="1"/>

                    <TextView
                        android:id="@+id/height"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="18sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/sideborders"/>

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="18sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:background="@drawable/sideborders"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:background="@drawable/sidebottomborder">

                        <TextView
                            android:id="@+id/type_1"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="20dp"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:layout_marginRight="2dp"
                            android:layout_marginLeft="5dp"
                            android:textColor="#222222"
                            />

                        <TextView
                            android:id="@+id/type_2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="20dp"
                            android:textSize="12sp"
                            android:gravity="center"
                            android:layout_marginLeft="2dp"
                            android:layout_marginRight="5dp"
                            android:textColor="#222222"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/homeNumberText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/results_home_number"
                android:gravity="center_vertical" />

            <LinearLayout
                android:id="@+id/home_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/bottomborder"/>

            <TextView
                android:id="@+id/mobileNumberText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/results_mobile_number"
                android:gravity="center_vertical"
                />

            <LinearLayout
                android:id="@+id/mobile_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/bottomborder" />

            <TextView
                android:id="@+id/workNumberText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="18sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/results_work_number"
                android:gravity="center_vertical" />

            <LinearLayout
                android:id="@+id/work_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:background="@drawable/bottomborder" />

            <LinearLayout
                android:id="@+id/contact_address_layout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/addressText"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/results_area"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/contact_address"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text=""
                    android:gravity="center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:orientation="horizontal"
                android:layout_margin="10dp"
                android:background="@drawable/descriptionbackground"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="4dp"
                android:paddingEnd="4dp"
                android:paddingTop="4dp"
                >

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />
            </LinearLayout>

            
        </LinearLayout>
    </ScrollView>
	
	<LinearLayout
        android:id="@+id/footer"
		android:layout_width="fill_parent"
		android:layout_height="50dp"
		android:orientation="horizontal"
		android:layout_alignParentBottom="true">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/button_description"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:text="@string/button_area"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:text="@string/button_cry"/>

    </LinearLayout>
			
</RelativeLayout>