<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout_addedit"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="175dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/add_edit_image"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/addcontactimage"
                    android:onClick="add_new_image"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="0dp" />

                    <EditText
                        android:id="@+id/add_edit_contact_name"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:hint="@string/results_name"
                        android:inputType="textCapWords"/>

                    <RelativeLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center">
                        <EditText
                            android:id="@+id/add_edit_contact_height_ft"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/results_height_ft"
                            android:layout_toLeftOf="@+id/height_centerizer"
                            android:layout_toStartOf="@+id/height_centerizer"/>

                        <View
                            android:id="@+id/height_centerizer"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:visibility="invisible"
                            android:layout_centerHorizontal="true"/>

                        <EditText
                            android:id="@+id/add_edit_contact_height_in"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_toRightOf="@+id/height_centerizer"
                            android:layout_toEndOf="@+id/height_centerizer"
                            android:hint="@string/results_height_in"/>
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/add_edit_contact_weight"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:hint="@string/results_weight"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bottomborder">

                <Spinner
                    android:id="@+id/type_1_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/types_1"
                    android:layout_toStartOf="@+id/type_centerizer"
                    android:layout_toLeftOf="@+id/type_centerizer"
                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp"
                    />

                <View
                    android:id="@+id/type_centerizer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="invisible"
                    android:layout_centerHorizontal="true"/>

                <Spinner
                    android:id="@+id/type_2_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/types_2"
                    android:layout_toEndOf="@+id/type_centerizer"
                    android:layout_toRightOf="@+id/type_centerizer"
                    android:layout_marginLeft="3dp"
                    android:layout_marginStart="3dp"/>
            </RelativeLayout>

            <EditText
                android:id="@+id/contact_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:maxLines="6"
                android:maxLength="255"
                android:gravity="top"
                android:hint="Description"/>

            <LinearLayout
                android:id="@+id/phone_number_parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bottomborder"
                android:paddingBottom="10dp"></LinearLayout>

            <LinearLayout
                android:id="@+id/extra_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:visibility="invisible"></LinearLayout>

            <RelativeLayout
                android:id="@+id/add_field_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Add New Field"
                    android:onClick="add_new_field_dialog"/>

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>